# 2025capstone

./: camera.txt  filter.py  human_tracker_node.py  k4a_device_launch.py  pointcloud_to_2d_map_node.py  run_all.launch.py  user_goal_planner_node.py
depth_map/: package.xml  setup.cfg  setup.py
depth_map/depth_map/: depth_map_node.py  filter.py  point_map_node.py
depth_map/launch/: depth_map.launch.py  octomap.launch.py  point.launch.py
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/md_controller/lib/md_controller/: md_controller
install/md_controller/share/md_controller/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/md_controller/share/md_controller/cmake/: md_controllerConfig-version.cmake  (+1 more)
install/md_teleop/lib/md_teleop/: md_teleop_key_node  md_teleop_key_node=md_teleop.md_teleop_key:mainteleop  md_teleop_key_node=md_teleop.md_teleop_key:mainteleop_node  teleop  test
install/md_teleop/share/md_teleop/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/motor_controller/share/motor_controller/: package.sh
log/: latest_build
motor_ws/: compile_commands.json
motor_ws/src/md_teleop/: setup.py
motor_ws/src/md_teleop/md_teleop/: teleop.py
src/md_controller/launch/: md_controller.launch.py
src/md_controller/src/: com.cpp  md_controller.cpp
src/md_teleop/md_teleop/: test.py
src/motor_controller/: package.xml  setup.py
src/motor_controller/motor_controller/: motor_node.py
(+8 files in other folders)
